fix order and working issues on iOS

--- a/src/app/metapath/metapath.component.scss
+++ b/src/app/metapath/metapath.component.scss
@@ -83,29 +83,49 @@
   fill: deeppink;
 }
 
-.player-group {
+.html-player {
   pointer-events: none;
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.player-group.animate {
+.html-player-scale {
+  transform: scale(.9);
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
-  .player-group-mask {
-    animation: playMask 0.3s steps(3) infinite;
-  }
-  .player-group-image {
+.html-player-image {
+  width: 300px;
+  height: 300px;
+  transform: translate(-150px, -282px);
+}
+
+.html-player.animate {
+
+  .html-player-image {
     animation: playPlayer 0.3s steps(3) infinite;
   }
+
+}
+
+.html-player.animate-back {
+
+  .html-player-image {
+    transform: scaleX(-1) translate(150px, -282px);
+  }
+
 }
 
 @keyframes playPlayer {
   100% {
-    transform: translate(-900px, 0);
-  }
-}
-
-@keyframes playMask {
-  100% {
-    transform: translate(900px, 0);
+    background-position-x: -900px;
   }
 }
 
